<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:id="@+id/register"
            android:text="@string/register"
            android:textSize="35dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#ffffff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/login_text01"
            android:textSize="17dp"
            android:textColor="#ffffff"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/register"
            android:text="@string/login_text01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


        <EditText
            android:id="@+id/input_name"
            android:layout_below="@id/login_text01"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="30dp"
            android:hint="@string/longin_name_hint01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/input_email"
            android:layout_below="@id/input_name"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/longin_email_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/input_password"
            android:layout_below="@id/input_email"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/longin_password_hint"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/input_confirm_password"
            android:layout_below="@id/input_password"
            android:inputType="textPassword"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:hint="@string/longin_password_confirm_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/btn_login"
            android:layout_marginTop="50dp"
            android:text="@string/login"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textColor="#000000"
            android:background="@drawable/btn_loginform"
            android:layout_below="@id/input_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        </RelativeLayout>




    </ScrollView>



</RelativeLayout>